# food-insecurity

./: README.md  pyproject.toml  run.sh
backend/: manage.py  pyproject.toml
backend/digital_pantry/: asgi.py  settings.py  urls.py  wsgi.py
backend/digital_pantry_app/: apps.py
